# ros2_serial_manager_ws

./: .gitignore  README.md
src/interface_pkg/: CMakeLists.txt  package.xml
src/interface_pkg/msg/: SerialMsg.msg
src/serial_manager_pkg/: CMakeLists.txt  package.xml
src/serial_manager_pkg/launch/: serial_manager.launch.py
src/serial_manager_pkg/src/: serial_manager.cpp  serial_manager.hpp
